--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,12 @@
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
+
+.profile-img {
+  border-radius: 50%;
+  height: 100px;
+}
+
+#title {
+  padding-bottom: 20px;
+}
