--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 }
 
 .gradient-background {
-  background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+  background: linear-gradient(300deg, #0097c9, #ff4c68, #FF655B);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
